<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_detail_exhibition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/txtAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#494F5D"
                    android:drawableTop="@drawable/ic_about"
                    android:drawablePadding="5dp"
                    android:text="@string/general_infomation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/txtExhibitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#494F5D"
                    android:drawableTop="@drawable/icon_exhibitors"
                    android:drawablePadding="5dp"
                    android:text="@string/exhibitor" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#494F5D"
                    android:drawableTop="@drawable/icon_products"
                    android:drawablePadding="5dp"
                    android:text="@string/products" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#494F5D"
                    android:drawableTop="@drawable/icon_fring"
                    android:drawablePadding="5dp"
                    android:text="@string/competition_activity" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#494F5D"
                    android:drawableTop="@drawable/icon_conferences"
                    android:drawablePadding="5dp"
                    android:text="@string/conferences" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#494F5D"
                    android:drawableTop="@drawable/icon_floorplan"
                    android:drawablePadding="5dp"
                    android:text="@string/floor_plan" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
