<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.phanluongha.myfirstapplication.DetailEventActivity">



    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.example.phanluongha.myfirstapplication.DetailEventActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/events"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </android.support.v7.widget.Toolbar>




        </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:background="#F5F5F5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtAbout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/ic_about"
                            android:text="@string/general_infomation"
                            android:textColor="#494F5D" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtExhibitor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/icon_exhibitors"
                            android:text="@string/exhibitor"
                            android:textColor="#494F5D" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout

                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtProduct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/icon_products"
                            android:text="@string/products"
                            android:textColor="#494F5D" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/icon_fring"
                            android:text="@string/competition_activity"
                            android:textColor="#494F5D" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/icon_conferences"
                            android:text="@string/conferences"
                            android:textColor="#494F5D" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/txtPlace"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/icon_floorplan"
                            android:text="@string/floor_plan"
                            android:textColor="#494F5D" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>
